feat: implement major enhancement on ui, logic, and routing

--- a/index.html
+++ b/index.html
@@ -1,10 +1,45 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/img/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>interndot-alfitsani</title>
+
+    <title>QuiSip - Platform Kuis Interaktif</title>
+    <meta
+      name="description"
+      content="QuiSip adalah platform kuis interaktif untuk mengasah pengetahuan dengan ribuan pertanyaan dari berbagai kategori. Tantang dirimu dan raih skor tertinggi!"
+    />
+    <meta
+      name="keywords"
+      content="kuis, quiz, trivia, belajar, pendidikan, pengetahuan, interaktif, game edukasi"
+    />
+    <meta name="author" content="Dot Intern - alfitsani" />
+    <meta name="robots" content="index, follow" />
+
+    <meta name="theme-color" content="#0ea5e9" />
+    <meta name="msapplication-TileColor" content="#0ea5e9" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://quisip.vercel.app/" />
+    <meta property="og:title" content="QuiSip - Platform Kuis Interaktif" />
+    <meta
+      property="og:description"
+      content="Asah otak dan raih skor tertinggi dengan ribuan pertanyaan seru dari berbagai kategori."
+    />
+    <meta property="og:image" content="/img/logo.svg" />
+    <meta property="og:locale" content="id_ID" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://quisip.vercel.app/" />
+    <meta name="twitter:title" content="QuiSip - Platform Kuis Interaktif" />
+    <meta
+      name="twitter:description"
+      content="Asah otak dan raih skor tertinggi dengan ribuan pertanyaan seru dari berbagai kategori."
+    />
+    <meta name="twitter:image" content="/img/logo.svg" />
+
+    <link rel="apple-touch-icon" href="/img/logo.svg" />
   </head>
   <body>
     <div id="root"></div>
